<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="237dp"
        android:layout_height="50dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="66dp"
        android:text="@string/student_registration_form"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userNameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="168dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/rollNoET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="33dp"
        android:ems="10"
        android:hint="@string/roll_no"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/genderTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameET" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="64dp"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate"
        app:layout_constraintVertical_bias="0.891" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="302dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="77dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderTV">

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="149dp"
            android:layout_height="match_parent"
            android:text="@string/female" />

    </RadioGroup>

    <TextView
        android:id="@+id/genderTV"
        android:layout_width="178dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="201dp"
        android:layout_marginBottom="12dp"
        android:text="@string/enter_the_gender"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="164dp"
        android:ems="10"
        android:hint="@string/dd_mm_yy"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="536dp" />

    <Spinner
        android:id="@+id/programmeSpinner"
        android:layout_width="203dp"
        android:layout_height="74dp"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="445dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swimming"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="329dp" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dancing"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="329dp" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reading"
        tools:layout_editor_absoluteX="250dp"
        tools:layout_editor_absoluteY="329dp" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reading"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="385dp" />

</androidx.constraintlayout.widget.ConstraintLayout>